style and layout changes

--- a/06week/Checkpoint2/html/index.html
+++ b/06week/Checkpoint2/html/index.html
@@ -25,7 +25,7 @@
       <h1>Contact Me</h1>
       <!--footer containing text boxes-->
         <label for="name" class="name">Name:
-          <input type="text" id="name">
+          <input type="text">
         </label>
         <label class="email">Email:
           <input type="email">
