--- a/06week/Checkpoint2/html/index.html
+++ b/06week/Checkpoint2/html/index.html
@@ -16,12 +16,13 @@
     <div class="header">
       <div class="initials">BT</div>
     </div>
-    <!--Hero Box containing name and title-->
+    <!--Hero Box containing name and title centered on page with a shadow border-->
     <div class="hero">
       <h1>Brandon Turner</h1>
       <h1>Web Developer</h1>
     </div>
     <div class="contact">
+      <form>
       <h1>Contact Me</h1>
       <!--footer containing text boxes-->
         <label for="name" class="name">Name:
@@ -34,7 +35,8 @@
           <textarea name="" id="message"></textarea>
         </label>
         <button class="button">SUBMIT</button>
-    </div>
+      </form>
+      </div>
     <p class="copyright">Brandon Turner 2018</p>
   </div>
 
