--- a/lynn-portfolio/blog-portfolio.html
+++ b/lynn-portfolio/blog-portfolio.html
@@ -15,11 +15,11 @@
         </div>
     </header>
     <hr class="blackfade">
-<div class="portfoliocontainer">
-    <div class="box box1">Box 1</div>
-    <div class="box box2">Box 2</div>
-    <div class="box box3">Box 3</div>
-    <div class="box box4">Box 4</div>
+<div class="box">
+    <div class="box1">Box 1</div>
+    <div class="box2">Box 2</div>
+    <div class="box3">Box 3</div>
+    <div class="box4">Box 4</div>
 </div>
 </body>
 </html>
