--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -1,10 +1,11 @@
 
 <!DOCTYPE html>
 <html lang=en>
-<head>
+<head> 
+    <link rel="stylesheet" href="./css/style.css">
  <title>Entry Level Developer Resume</title>
 </head>
-<body>
+<body> 
     <center>
         <h1>Sky Mendes</h1>
     <h2><font color= #333333>Web Developer</font></h2>
