--- a/06week/Checkpoint2/html/index.html
+++ b/06week/Checkpoint2/html/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Brandon Portfolio</title>
-  <link rel="stylesheet" href="./Checkpoint2/css/reset.css">
-  <link rel="stylesheet" href="./Checkpoint2/css/style.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Charmonman|Lobster" rel="stylesheet">
 </head>
 
