adjusting index path

--- a/06week/Checkpoint2/index.html
+++ b/06week/Checkpoint2/index.html
@@ -1,1 +1,45 @@
-Checkpoint2
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Brandon Portfolio</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Charmonman|Lobster" rel="stylesheet">
+</head>
+
+<body>
+  <!--Container for everytihng-->
+  <div class="container">
+    <div class="header">
+      <div class="initials">BT</div>
+    </div>
+    <!--Hero Box containing name and title centered on page with a shadow border-->
+    <div class="hero">
+      <h1>Brandon Turner</h1>
+      <h1>Web Developer</h1>
+    </div>
+    <div class="contact">
+      <form>
+      <h1>Contact Me</h1>
+      <!--footer containing text boxes-->
+        <label for="name" class="name">Name:
+          <input type="text">
+        </label>
+        <label class="email">Email:
+          <input type="email">
+        </label>
+        <label message="message">Messages
+          <textarea name="" id="message"></textarea>
+        </label>
+        <button class="button">SUBMIT</button>
+      </form>
+      </div>
+    <p class="copyright">Brandon Turner 2018</p>
+  </div>
+
+
+</body>
+</html>
