--- a/chcekpoint2/index.html
+++ b/chcekpoint2/index.html
@@ -30,23 +30,23 @@
             </div>
             <div class="box">
                 <img src="https://source.unsplash.com/random/351x200" alt="">
-                <a href="../web-workbook/02week/bio/index.html" class="btn">Bio</a>
+                <a href="../02week/bio/index.html" class="btn">Bio</a>
             </div>
             <div class="box">
                 <img src="https://source.unsplash.com/random/352x200" alt="">
-                <a href="../web-workbook/03week/airplane/index.html" class="btn">Airplane</a>
+                <a href="../03week/airplane/index.html" class="btn">Airplane</a>
             </div>
             <div class="box">
                 <img src="https://source.unsplash.com/random/353x200" alt="">
-                <a href="../web-workbook/04week/nasa/index.html" class="btn">Nasa</a>
+                <a href="../04week/nasa/index.html" class="btn">Nasa</a>
             </div>
             <div class="box">
                 <img src="https://source.unsplash.com/random/349x200" alt="">
-                <a href="../web-workbook/04week/welcome-to-our-site/index.html" class="btn">Welcome to Our Site</a>
+                <a href="../04week/welcome-to-our-site/index.html" class="btn">Welcome to Our Site</a>
             </div>
             <div class="box">
                 <img src="https://source.unsplash.com/random/348x200" alt="">
-                <a href="../web-workbook/05week/transitions-and-transformations/index.html" class="btn">CSS Transition</a>
+                <a href="../05week/transitions-and-transformations/index.html" class="btn">CSS Transition</a>
             </div>
         </section>
     </div>
