--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -91,8 +91,8 @@
   </main>
 
   <!-- workbook nav-menu script   -->
-  <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
-  <script type="text/javascript" src="../../js/nav-menu.js"></script>
+  <script type="text/javascript" src="/simple-scrollbar/simple-scrollbar.js"></script>
+  <script type="text/javascript" src="/js/nav-menu.js"></script>
 
 </body>
 
