--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -61,7 +61,7 @@
         <button id="btn-add-item">Add Item</button>
         <button id="btn-remove-item">Remove Item</button>
 
-        <p class="paragraph" id="p1"><span>All-New Fire 7 Tablet:</spa> The next generation of our best-selling Fire
+        <p class="paragraph" id="p1"><span>All-New Fire 7 Tablet:</span> The next generation of our best-selling Fire
             tablet ever -
             now thinner, lighter, and with longer battery life and an improved display. More durable than the latest
             iPad.</p>
