fixed script tag

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -95,7 +95,7 @@
 
   <!-- workbook nav-menu scripts   -->
   <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
-  <script type="text/javascript" src="/js/nav-menu.js"></script>
+  <script type="text/javascript" src="../../js/nav-menu.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 
   <!-- End Document
