--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -25,70 +25,46 @@
         </nav>
 <!--Main body -->
     <header>
-        <div class="container">
-            <div id="branding">
-            <h1>My Resume</h1>
-        </div>
-        </div>
+        <h1>My Resume</h1>
     </header>
     <section>
         <section id="Main">
             <div class="container">
-            <ul id="main">
-            <li><h2 id="Summary">Summary</h2>
-                <p>Motivated U.S Marine Veteran with Electronic Maintenance Technician experience worth over 8 years of experience. Knowledge of testing and troubleshooting faulty electronic equipment down to circuit cards using available schematics, technical data, test equipment. Pursued a certificate for Certifed Combo Pipe welder, gained structural steel experience worth over 4 years of experience. Performed rigging while working for an Ironworker Company. Currently working in the Wind Turbine industry as a Mobile Wind Turbine Technician
-                </p>
-            <h2>
-                Current Position and Company
-            </h2>
-                <p>Mobile Wind Turbine Technician, E.On Energy Services (Nationwide)</p>
-                <p>Start: 01/2017 - Current</p>
-            </li>
-            <li><h2 id="Employment History"></h2>
-                <h2>Employment History</h2>
-            </h2>
-                <p>Ironworker-Welder, Empire Steel Inc. Houston, TX</p>
-            <h3>
-                Start Date - End Date
-            </h3>
-                <p>August 2016 - December 2016</p>
-            </li>
-            <li><h2 id="Education"></h2>
-                <h2>Education</h2>
-            </h2>
-            <h3>
-                High school:
-            </h3>
-                <p>Lufkin High School, Class of 2008</p>
-            <h3>
-                College:
-            </h3>
-                <p>University of Houston - Main Campus</p>
-                <p>
-                    Start: 08/2012
-                </p>
-                <p>
-                    End: 05/2013
-                </p>
-            <h3>
-                Technical School:
-            </h3>
-                <p>Sparc Academy</p>
-                <p>
-                    Start: 01/2015
-                </p>
-                <p>
-                    End: 12/2015
-                </p>
-            </li>
-            <li><h2 id="Technical Skills"></h2>
-                <h2>Technical Skills:</h2>
-              <p>HTML - Intro</p>
-              <p>CSS - Intro</p>
-            </li>
-        </ul>
+                <ul id="main">
+                    <li>
+                        <h2 id="Summary">Summary</h2>
+                            <p>Motivated U.S Marine Veteran with Electronic Maintenance Technician experience worth over 8 years of experience. Knowledge of testing and troubleshooting faulty electronic equipment down to circuit cards using available schematics, technical data, test equipment. Pursued a certificate for Certifed Combo Pipe welder, gained structural steel experience worth over 4 years of experience. Performed rigging while working for an Ironworker Company. Currently working in the Wind Turbine industry as a Mobile Wind Turbine Technician
+                            </p>
+                        <h2>Current Position and Company</h2>
+                            <p>Mobile Wind Turbine Technician, E.On Energy Services (Nationwide)</p>
+                            <p>Start: 01/2017 - Current</p>
+                    </li>
+                    <li>
+                        <h2 id="Employment History">Employment History</h2>
+                            <p>Ironworker-Welder, Empire Steel Inc. Houston, TX</p>
+                            <p>Start Date - End Date</p>
+                            <p>August 2016 - December 2016</p>
+                    </li>
+                    <li>    
+                        <h2 id="Education">Education</h2>
+                            <h3>High school:</h3>
+                                <p>Lufkin High School, Class of 2008</p>
+                            <h3>College:</h3>
+                                <p>University of Houston - Main Campus</p>
+                                <p>Start: 08/2012 Ended:05/2013</p>
+                            <h3>Technical School:</h3>
+                                <p>Sparc Academy</p>
+                                <p>Start: 01/2015 Ended: 12/2015</p>
+                    </li>
+                    <li>
+                        <h2 id="Technical Skills">Technical Skills</h2>
+                            <p>HTML - Intro</p>
+                            <p>CSS - Intro</p>
+                    </li>
+                </ul>
+            </div>
     </section>
-    </div>
+<!--Footer-->
     <footer>
         <p>Published by: Amaro Terrazas</p>
     </footer>
