--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -57,13 +57,13 @@
       </ul>
 
       <div id="btn-container">
-        <button id="btn-add-item">Add Item</button>
-        <button id="btn-remove-item">Remove Item</button>
+        <button class="btn" id="btn-add-item">Add Item</button>
+        <button class="btn" id="btn-remove-item">Remove Item</button>
       </div>
 
       <div class="item">
         <img class="item-img" src="./img/tablet.jpg" alt="a picture of a tablet">
-        <p class="paragraph" id="p1"><span>All-New Fire 7 Tablet:</span> The next generation of our best-selling Fire
+        <p class="paragraph" id="p1"><span class="item-name">All-New Fire 7 Tablet:</span> The next generation of our best-selling Fire
           tablet ever -
           now thinner, lighter, and with longer battery life and an improved display. More durable than the latest
           iPad.</p>
@@ -71,7 +71,7 @@
 
       <div class="item">
         <img class="item-img" src="./img/chair.jpg" alt="a picture of a tablet">
-        <p class="paragraph" id="p2"><span>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms:</span>
+        <p class="paragraph" id="p2"><span class="item-name">Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms:</span>
           Completely transform
           your living or restaurant space with this vintage style chair. Adding colorful chairs can rev up any setting.
           The versatility of this chair easily conforms in different environments. Chairs are lightweight and easily
@@ -85,7 +85,7 @@
 
       <div class="item">
         <img class="item-img" src="./img/echo.jpg" alt="a picture of a tablet">
-        <p class="paragraph" id="p3"><span>Amazon Echo:</span> Amazon Echo is a hands-free speaker you control with
+        <p class="paragraph" id="p3"><span class="item-name">Amazon Echo:</span> Amazon Echo is a hands-free speaker you control with
           your voice. Echo
           connects to the Alexa Voice Service to play music, make calls, send and receive messages, provide
           information,
@@ -94,7 +94,7 @@
 
       <div class="item">
         <img class="item-img" src="./img/hottub.jpg" alt="a picture of a tablet">
-        <p class="paragraph" id="p4"><span>Coleman Lay Z Spa Inflatable Hot Tub:</span> Pamper yourself in relaxing
+        <p class="paragraph" id="p4"><span class="item-name">Coleman Lay Z Spa Inflatable Hot Tub:</span> Pamper yourself in relaxing
           heated water
           surrounded by soothing bubble jets. Easy to operate digital control panel; automatic start/stop
           timer-controlled heating system. 4-6 Person Capacity. Inflated walls are made of TriTech material that
