added fizzbuzz to nav menus

--- a/nav-menu.html
+++ b/nav-menu.html
@@ -56,6 +56,7 @@
           <button class="week transition-all">Week 06</button>
             <div class="dropdown-content">
               <a href="../../06week/dice/index.html" class="nav-link transition-all">Dice</a>
+              <a href="../../06week/fizzbuzz/index.html" class="nav-link transition-all">FizzBuzz</a>
             </div>
       </div>
 
