--- a/home-nav-menu.html
+++ b/home-nav-menu.html
@@ -56,6 +56,7 @@
         <button class="week">Week 06</button>
         <div class="dropdown-content">
           <a href="06week/dice/index.html" class="nav-link">Dice</a>
+          <a href="06week/fizzbuzz/index.html" class="nav-link">FizzBuzz</a>
         </div>
       </div>
 
