initial commit for dice project

--- a/06week/dice/index.html
+++ b/06week/dice/index.html
@@ -46,12 +46,17 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <main>
-
+    <h1>Dicey Results</h1>
+    <div id="dice"></div><br>
+    <div class="button" onclick="roll()">Roll</div>
+    <div id="report"></div>
   </main>
 
   <!-- workbook nav-menu scripts   -->
   <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
   <script type="text/javascript" src="../../js/nav-menu.js"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
+
 
   <!-- End Document
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
