updated portfolio page

--- a/lynn-portfolio/resume.html
+++ b/lynn-portfolio/resume.html
@@ -6,8 +6,8 @@
 </head>
 
 <body class="resume">
- <h1 style="color: whitesmoke">Lynn Wise</h1>
- <h1 style="font-size: 20px;">WRITER & DIGITAL PUBLISHING SPECIALIST</h1>
+ <h1><a href="./bio.html" style="color: whitesmoke">Lynn Wise</a></h1>
+ <h1 style="font-size: 20px;"><a href="./bio.html" style="color: rgb(189, 182, 182)">WRITER & DIGITAL PUBLISHING SPECIALIST</a></h1>
  <hr class="blackfade">
  <div class="boxleft"> 
     <div class="child">
