--- a/lynn-portfolio/blog-portfolio.html
+++ b/lynn-portfolio/blog-portfolio.html
@@ -16,10 +16,10 @@
     </header>
     <hr class="blackfade">
 <div class="box">
-    <div class="box1">Box 1</div>
-    <div class="box2">Box 2</div>
-    <div class="box3">Box 3</div>
-    <div class="box4">Box 4</div>
+    <div class="box1">Writing</div>
+    <div class="box2">Web dev</div>
+    <div class="box3">Multimedia</div>
+    <div class="box4">Reimagine Migration</div>
 </div>
 </body>
 </html>
