--- a/06week/fizzbuzz/index.html
+++ b/06week/fizzbuzz/index.html
@@ -46,12 +46,20 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <main>
-
+    <div class="container-main">
+      <h1>FizzBuzz</h1>
+      <input type="text" name="Limit" id="input" placeholder="How much to FizzBuzz?">
+      <button id="button">GO!</button>
+      <div class="container-inner">
+        
+      </div>
+    </div>
   </main>
 
   <!-- workbook nav-menu script   -->
   <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
   <script type="text/javascript" src="../../js/nav-menu.js"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
 
   <!-- End Document
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
