minor changes to template

--- a/00template/project-name/index.html
+++ b/00template/project-name/index.html
@@ -49,7 +49,7 @@
 
   </main>
 
-  <!-- workbook nav-menu script   -->
+  <!-- scripts   -->
   <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
   <script type="text/javascript" src="../../js/nav-menu.js"></script>
 
