--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -14,34 +14,33 @@
 	<div class="jumbotron">
 		<h1>Neil Cho <a class="fab fa-linkedin" href="https://www.linkedin.com/in/neil-cho-099298172"></a></h1>
  <!-- <h1>Neil Cho <a href="https://www.linkedin.com/in/neil-cho-099298172"><i class="fab fa-linkedin"></a></i></h1> -->
- 	<p>IT Professional | Project Management <span class="tab-b"> neilcho83@gmail.com</span></p>
+ 	<p>Student Programmer | IT Professional <span class="tab-b"> neilcho83@gmail.com</span></p>
 	</div>
 
-<section>
 
+	<div>
 	<article><span>Areas of Expertise</span></article>
 	<p>Project Management <span class ="tab-a"> Continuous Process Improvement</span><span class="tab-b">New Process Implementation</span></p>
 	<p>PO Planning, Execution & Analysis <span class ="tab-a"> Service Operation Management</span><span class="tab-b">Staff Training & Development</span></p>
-	</article>
+		<br>
+	</div>
 
-</section>
-	<br>
-
-<section>
+	<div>
 	<article><span>Key Highlights</span></article>
 	<li>Managed various projects related to manufacturing helpdesk operations, refined optical drive testing facility center operations, and implemented new RMA processes for OEM vendors</li>
 	<li>Provided staff training and development for IT helpdesk members, equipment testers, and exceeded KPI levels set by the customers</li>
 	<li>Established partnerships with cross-functional business partners including sales, marketing, manufacturing, engineering, and customer support to deliver outstanding results in logistics planning and excess inventory reduction strategy</li>
 	<li>Recognized for achieving cost-effective results through foreseeing possible gaps in existing process and  pre-incident monitoring while meeting business target and budget</li>
-	<br>
-</section>
+		<br>
+	</div>
 
 
-<section>
+
+	<div>
 	<article><span>Professional Experience</span></article>
 
-<p><b>Apple Inc.,</b> Austin, TX<span class="tab-b"> 2016-2017</span></p>
-<p><em>Worldwide Enterprise Server and Education Support Advisor</em></p>
+	<p><b>Apple Inc.,</b> Austin, TX<span class="tab-b"> 2016-2017</span></p>
+	<p><em>Worldwide Enterprise Server and Education Support Advisor</em></p>
 
 
 	<li>Evaluated current processes and devised new ways to improve processes for more efficient handling of workflow, such as the APAC escalation matrix after 8PM CST</li>
@@ -55,8 +54,8 @@
 	<br>
 
 
-<p><b>Samsung SDS America,</b> Austin, TX<span class="tab-b">2012-2017</span></p>
-<p><em>Systems Operation Center Manager</em></p>
+	<p><b>Samsung SDS America,</b> Austin, TX<span class="tab-b">2012-2017</span></p>
+	<p><em>Systems Operation Center Manager</em></p>
 
 	<li>Managed the day-to-day operations, inclusive of administrative staff oversight, performance improvement,  staff training and development</li>
 	<li>Developed and implemented processes that improve efficiency and enhance productivity of SIOC technicians  who support the Manufacturing Systems Operations at Samsung Austin Semiconductor to adhere to strict SLAs outlined by internal customers</li>
@@ -73,11 +72,9 @@
 	<li>Orchestrated a cross-functional team of system engineers, account managers, and technicians in the design  and implementation stage</li>
 	<li>Freed up 10 full-time engineer resources to be dedicated in other high-priority, high-margin projects by  designing and delivering the automated solution</li>
 	<br>
+</div>
 
-</section>
-
-<section>
-
+<div>
 <article><span>Education</span></article>
 	<p><b>University of Texas at Austin, Professional Development Center, Austin, TX</b></p>
 	<p><em>Project Management Certification Program, August 2014</em></p>
@@ -88,27 +85,28 @@
 	<p><em>Bachelor of Arts in English, May 2006</em></p>
 		<li>Advertising Layout Editor at Daily Texan (school newspaper)</li>
 		<br>
-</section>
+</div>
 
-<section>
+<div>
 <article><span>Additional Qualification</span></article>
 	<li>Proficient in SAP module structure, Oracle SQL, MS SQL, Microsoft Office Suite, Windows, Mac OS, Linux, UNIX, Optical Disc Drive Failure Analysis, extensive computer hardware building/repairing/maintenance knowledge, basic C++ programming</li>
 	<li>Basic knowledge in HTML, CSS, and JS</li>
 	<li>Fluent in Korean, limited working proficiency in Spanish</li>
 	<li>Work Authorization: US Citizen</li>
 	<br>
-</section>
+</div>
 
-<section>
+<div>
 <article><span>Personal Interest</span></article>
+	
 	<li>Amateur pianist and tenor – performed at Carnegie Hall as a member of the Men’s National Honor Choir</li>
 	<li>Home Improvement Specialist</li>
 	<li>Fitness enthusiast: powerlifting, swimming, tennis, and taekwondo</li>
-	<li>Food experimentation
+	<li>Food experimentation</li>
+	<li>Web Programming</li>
 	<br>
 	<br>
-
-</section>
+</div>
 
 <footer>
 	<h5><p><i class="far fa-copyright"></i> Neil Cho</p></h5>
