--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -6,8 +6,13 @@
  <title>Entry Level Developer Resume</title>
 </head>
 <body> 
-    <center>
-        <h1>Sky Mendes</h1>
+<center>
+         <img src="https://avatars1.githubusercontent.com/u/43713524?s=400&u=30113219e8d9f0383d4397dade947b711f689b41&v=4"
+    width="200px" height="200px">
+       <h1>Sky Mendes</h1> 
+        <div>skymendesross@gmail.com</div>
+       <div>860-983-7552</div>
+<hr>
     <h2><font color= #333333>Web Developer</font></h2>
     <h2>
         <u><font color=#333333>Objective</u></h2>
@@ -28,7 +33,10 @@
     <div><b>Howell Cheney Technical High School,</b><i> September, 2010 - June, 2014</i></div>
 
     <h2><u><font color=#333333>Skills</font></u></h2>
-    <div style="width: 20%; margin-left: auto; margin-right: auto;">
+    <div style="width: 55%;
+         margin-left: auto; 
+        margin-right: auto;">
+
     <ul style=list-style-type:circle><li>Ability to work independently and with a group</li>
     <li>Critical thinking</li>
     <li>Attention to detail</li>
