New HTML Resume Template

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -1,35 +1,274 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Page Title</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <img src="./desktop-image.png">
-    <style>
-        img {
-            float: right;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Resume</title>
+  <link rel="stylesheet" type="text/css" href="style1.css">
+
 </head>
 
 <body>
-<<<<<<< HEAD
-    <h1>My First Headin</h1>
-=======
-    <h1>My First Headingg</h1>
->>>>>>> 337a4265ce02340a88d6b8832cc7f98f6af26ded
-    <p>My first paragraph.</p>
+  <div id="top"></div>
+  <header class="banner">
+    <h1>Vinoth Kumar Nanda Kumar</h1>
+    <br>
+    <h3>Senior Software Test Engineer at Visa</h3>
 
-    <header>h</header>
-    <nav>s</nav>
-    <section>fdfsdfs</section>
-<<<<<<< HEAD
-    <article>sdfsdfd</article>
-=======
-    <article>sdfsdf</article>
->>>>>>> 337a4265ce02340a88d6b8832cc7f98f6af26ded
-    <aside>sdfsdf</aside>
-    <footer>asdfsfd</footer>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/vinothkumarnk/">LinkedIn</a></li>
+
+    </ul>
+  </nav>
+
+  <main>
+
+    <section>
+      <h2>Overall Summary</h2>
+      <article>
+        <header>
+          <h3>Brief Introduction</h3>
+        </header>
+        <p>I am a Senior Software Test Engineer having an interest to find more software bugs through both manual and
+          automated testing fashion. I’ve been ensuring that the release of software products is achieved after high
+          quality inspection.
+          A great team player with multi-tasking abilities, excellent communication, customer relationship and
+          interpersonal skills, ability to work independently as well as part of an integrated team.</p>
+        <br>
+        <h3>Certifications</h3>
+        <p>Scrum master from scrum institute, ISTQB certified Test Lead, HP QTP and other software testing quality
+          certifications.</p>
+        <br>
+        <h3>Software Tools or Methodologies</h3>
+        <p>Selenium, Cucumber, QTP (Quick Test Professional), UFT API (Unified Functional Testing), HP ALM (Application
+          Lifecycle Management) and HP QC (Quality Center), JIRA, Rally, IBM GHT (Green Hat Tester) or RIT (Rational
+          Integration Tester), SOAP UI, Mainframe terminal emulator, Databases like Oracle, DB2 and tools like IBM DB2
+          command center and SQL developer tools. Cloud based - Salesforce.</p>
+        <br>
+        <h3>Domain and Methodology</h3>
+        <p>US banking and Financial services – Waterfall and Agile methodologies.</p>
+        <br>
+        <h3>My work area</h3>
+        <p>Automation Framework Development with Keyword Driven Approach, Hybrid Approach and Data Driven Approach for
+          Mainframe and Web Based Applications.</p>
+
+        <p>Business Analysis, Requirement Gathering, Writing technical materials and business requirement documents.</p>
+        <p>Smoke testing, Regression testing, Functional testing, End-to-End testing, User Interface testing, Database
+          testing, manual or automated, Web services testing (SOA) and Mobile testing in both Apple and Android real
+          mobile/tablet devices.</p>
+        <p>Regular status, defect, projected and actual execution reports, risk assessment to the members of management
+          and project team.</p>
+      </article>
+
+    </section>
+
+    <section>
+      <h2>Experience Summary</h2>
+      <article>
+        <header>
+          <h3>Senior Software Test Engineer</h3>
+          <p>Visa Inc</p>
+          <p>October 2016 - Present</p>
+          <br>
+        </header>
+        <p>Design and develop test plans and functional test cases from business requirements.</p>
+        <p>Participate in Test design/plan review sessions with peers and other stakeholders</p>
+        <p>Provide estimates on scope and scale of effort required to test changes</p>
+        <p>Design, develop and maintain test environments and automated test suites</p>
+        <p>Identify opportunities for further testing process improvements</p>
+        <p>Execute test cases, analyze and report test results to product teams</p>
+        <p>Support cross-functional teams in integrated test efforts.</p>
+        <p>Ensure delivery of a high quality product meeting all requirements within the scheduled timeframe</p>
+        <p>Report project status and issues to project managers and management.</p>
+        <p>Collaborate closely with the development team to analyze, debug and resolve any issues</p>
+        <p>Implement standard processes, tools, and metrics to deliver large-scale projects from inception to
+          conclusion that meet quantifiable business objectives</p>
+      </article>
+
+      <article>
+        <header>
+          <h3>Onsite Test Lead and Business Analyst</h3>
+          <p>TATA Consultancy Services</p>
+          <p>January 2015 - September 2016</p>
+          <br>
+        </header>
+        <p>Analyzed business and functional requirements and developed test cases as per functional specification in
+          agile projects.</p>
+        <p>Involved in Requirements Gathering and Preparation of Manual Test Cases.</p>
+        <p>Involved in the end to end test plan design process wherein the manual testing team would closely
+          participate in the Design discussions with development team to ensure the coverage of requirement
+          functionality.</p>
+        <p>Designed and developed Test Cases based on Business rules and Functional Requirements.</p>
+        <p>Reviewed Test Cases developed by offshore team to ensure coverage and conformance to business requirements.</p>
+        <p>Responsible for the execution of Test cases and Test scripts.</p>
+        <p>Interacting in all the day - day activities concerned to the deliverables with other strategic partners and
+          clients.</p>
+        <p>Contributing ideas or solutions for various outstanding issues encountered. </p>
+        <p>Conducted Regression testing to confirm no impact on other modules.</p>
+        <p>Metrics prepared on Test case Development, Execution and Defect filed.</p>
+      </article>
+
+
+      <article>
+        <header>
+          <h3>Onsite Test Lead - QA Automation and Manual</h3>
+          <p>TATA Consultancy Services</p>
+          <p>September 2014 - December 2014</p>
+          <br>
+        </header>
+        <p>Leading Team in functional and Technical aspect.</p>
+        <p>Preparing Test Plans (Detailed Test Plan Specification), Test Summary Reports, Metrics, scheduling meetings
+          for Defect analysis, Test Case walk through, schedule entry and exit criteria meeting with Development and
+          ensuring that the application adheres to the requirements.</p>
+        <p>Working with development team regarding Open\​Assigned\​Returned\​Reopened Defects during Daily\​Weekly
+          Defect status meeting and requesting development team to Business prioritize the defects.</p>
+        <p>Coordinating in developing and executing manual test scripts to support testing requirements using HP
+          Quality Center. </p>
+        <p>Coordinating the Automation testing activities through development and execution of the test scripts. </p>
+        <p>Provide approval for implementation of New Features during the Test Execution after testing the impact of
+          the New Feature to the Application. </p>
+        <p>Reporting Daily/Weekly/Monthly status.</p>
+      </article>
+
+
+      <article>
+        <header>
+          <h3>Offshore Test Lead and Test Analyst</h3>
+          <p>TATA Consultancy Services</p>
+          <p>March 2010 - August 2014</p>
+          <br>
+        </header>
+        <p>Manual Testing</p>
+        <p>Performing application study.</p>
+        <p>Requirement gathering and scope analysis</p>
+        <p>Test plan preparation.</p>
+        <p>Preparation of the test scripts.</p>
+        <p>Data analysis and conditioning.</p>
+        <p>Test execution</p>
+        <p>Defect Cause Analysis and reporting.</p>
+        <p>Deliverables: Test plan, test scripts, Understanding documents and test execution.</p>
+        <br>
+        <p>Automation Testing - Quick test Professional (QTP) and Green Hat Tester (GHT)</p>
+        <p>Developing the regression scripts suite.</p>
+        <p>Maintenance of the automation framework and developing the automation test scripts.</p>
+        <p>Data preparation for automated test scripts and execution of the scripts.</p>
+        <p>Deliverables: Automation Test Scripts design and execution. Test Execution report and Test Summary Report.</p>
+
+
+
+      </article>
+
+    </section>
+
+
+    <section>
+      <h2>Education</h2>
+      <article>
+        <header>
+          <h3>Anna University</h3>
+        </header>
+        <p>Bachelor of Technology (B.Tech.), Information Technology</p>
+        <p>2005-2009</p>
+        <br>
+        <h3>Velammal Matriculation Higher Secondary School</h3>
+        <p>Higher Secondary Education</p>
+        <p>2003-2005</p>
+        <br>
+        <h3>Doveton Corrie Boys Higher Secondary School</h3>
+        <p>High School</p>
+        <p>1993-2003</p>
+
+      </article>
+
+    </section>
+
+    <section>
+      <h2>Technical Skills</h2>
+      <article>
+        <header>
+          <h3>Industry Knowledge</h3>
+        </header>
+        <p>Business Analysis, Regression Testing, Manual testing, Defect Tracking, Software Quality Assurance
+          Agile and Waterfall Methodologies, Test planning, Test Cases, Web Services
+        </p>
+        <br>
+
+        <header>
+          <h3>Tools and Technologies</h3>
+        </header>
+        <p>HP UFT API,
+          IBM Greenhat,
+          Test Automation Framework,
+          Mobile Testing,
+          ALM,
+          Requirement Specifications,
+          Rally,
+          Application Lifecycle Management,
+          Test Execution,
+          SQL, DB2,
+          Defect Life Cycle,
+          Software Testing Life Cycle,
+          SOA Testing,
+          Robot Framework,
+          HP Quality Center,
+          JIRA,
+          Soap UI,
+        </p>
+
+        <br>
+
+
+      </article>
+
+    </section>
+
+
+    <section>
+      <h2>Accomplishments</h2>
+      <article>
+        <header>
+          <h3>10 Honors and Awards</h3>
+        </header>
+        <p>3 Visa Go Beyond Awards, Torch Award - Visa, 2 Certificate of Excellence - Flagstar, TCS Best Team Award,
+          TCS Knowmax hall of fame, TCS On the spot awards, Wow Card at Flagstar.
+        </p>
+        <br>
+
+        <header>
+          <h3>Certifications</h3>
+        </header>
+        <p>Scrum Master Accredited certification</p>
+        <p>ISTQB </p>
+        <p> Foundations of Programming: Test-Driven Development </p>
+        <p> HP Quick Test Professional</p>
+        </p>
+        <br>
+
+
+      </article>
+
+    </section>
+
+
+  </main>
+
+  <aside>
+    <h2>Contact Information</h2>
+    <br>
+    <address>Address: 8585 Spicewood Springs Rd, Austin, TX 78759.</address>
+    <p>Phone: 980-428-2487</p>
+    <p>Email: vinothkumar.nk@gmail.com</p>
+  </aside>
+
+  <footer>
+    <p class="footer">
+      <li><a href="#top">Back to the top</a></li>
+    </p>
+  </footer>
+
 </body>
 
 </html>
