--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>My First Heading</h1>
+    <h1>My First Headin</h1>
     <p>My first paragraph.</p>
 
     <header>h</header>
