--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -1,1 +1,22 @@
-Hello Git!!
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello world</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+    <nav>
+
+    </nav>
+    <main>
+
+    </main>
+    <span></span>
+    <section>
+
+    </section>
+
+  </body>
+</html>
