final copy updated

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -7,37 +7,33 @@
 </head>
 <body> 
 <center>
-         <img src="https://avatars1.githubusercontent.com/u/43713524?s=400&u=30113219e8d9f0383d4397dade947b711f689b41&v=4"
-    width="200px" height="200px">
+         <img src="https://avatars1.githubusercontent.com/u/43713524?s=400&u=30113219e8d9f0383d4397dade947b711f689b41&v=4">
        <h1>Sky Mendes</h1> 
         <div>skymendesross@gmail.com</div>
        <div>860-983-7552</div>
 <hr>
-    <h2><font color= #333333>Web Developer</font></h2>
-    <h2>
-        <u><font color=#333333>Objective</u></h2>
-            <span>Obtaining a job in UX Design to kickstart a new career.</font></span>
+    <h2>Web Developer</h2>
+    <h2>Objective</h2>
+            <span>Obtaining a job in UX Design to kickstart a new career.</span>
     <!-- this is my work experience -->
-    <h2><font color=#333333>Experience</font></h2>
+    <h2>Experience</h2>
     <span><b>Pastry Chef, Buenos Aires Cafe </b></span>
     <span><i>April, 2018 - Current</i></span>
 
 
-    <div><b>Pastry Chef Assistant </b><span><i>July,2016 - April 2018 </i></span></div>
+    <div><b>Pastry Chef Assistant </b><span><i>Julys, 2016 - April 2018 </i></span></div>
 
 
-    <h2><u><font color=#333333>Education</font></u></h2>
+    <h2>Education</h2>
     <div><b>Austin Coding Academy,
     </b><i>October, 2018 - June, 2019</i></div>
     <div><b>Lincoln Culinary Institute,</b><i> January, 2015 - March, 2016</i></div>
     <div><b>Howell Cheney Technical High School,</b><i> September, 2010 - June, 2014</i></div>
 
-    <h2><u><font color=#333333>Skills</font></u></h2>
-    <div style="width: 55%;
-         margin-left: auto; 
-        margin-right: auto;">
+    <h2>Skills</h2>
+    <div>
 
-    <ul style=list-style-type:circle><li>Ability to work independently and with a group</li>
+    <ul><li>Ability to work independently and with a group</li>
     <li>Critical thinking</li>
     <li>Attention to detail</li>
     <li>Conflit resolution</li>
@@ -45,9 +41,9 @@
     <li>Adaptability</li>
     </ul>
     </div>
-    <h2><u><font color=#333333>Links</font></u></h2>
-    <div style="width: 20%; margin-left: auto; margin-right: auto;">
-    <ul style=list-style-type:circle><li><a href= https://www.linkedin.com/in/sky-mendes-7097bb89><b><i>LinkedIn</i></b></a></li>
+    <h2>Links</h2>
+    <div>
+    <ul><li><a href= https://www.linkedin.com/in/sky-mendes-7097bb89><b><i>LinkedIn</i></b></a></li>
     <li><a href=https://github.com/skymendes><i><b>Github</b></i></a></li>
     </ul>
     </div>
