still working on list items

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -10,13 +10,15 @@
   <body>
   <h1>Shopping Cart</h1>
   
-  <ul>
+  <ul id="listItems">
     <li>All-New Fire 7 Tablet</li>
     <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms</li>
     <li>Amazon Echo</li>
     <li>Coleman Lay Z Spa Inflatable Hot Tub</li>
   </ul>
   
+  <button onclick="myFunction()">Number of List Items</button>
+
   <div id="div">
   
     <p class="paragraph" id="P1">All-New Fire 7 Tablet: The next   generation of our best-selling Fire tablet ever - now thinner,   lighter, and with longer battery life and an improved display. More   durable than the latest iPad.</p>
