added changes to resume

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -3,23 +3,27 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
  <title>Michael Snowden Resume</title>
+
 </head>
 
-<body>
+<body style="background-color:lightgrey;">
   <h1>Michael Snowden</h1>
   512.765.1415 mtsnowden@gmail.com
  <hr>
  <h2> Summary </h2>
- <p>Charismatic, talented and diligent professional offering expertise in
+ <p style="color:red;">Charismatic, talented and diligent professional offering expertise in
    business management, customer service and communications. Poised and
      competent team builder and natural leader who thrives in fast-paced work
      environments.</p>
  <h2> Experience </h2>
- <h4> Golds Gym </h4>
+ 
+ <h3 style="color:gold"> Golds Gym </h3>
  Front Desk Manager<br>
  Killeen, Texas July 2018 - Present
- <ul>
+ <ul style="list-style-type:circle">
    <li>Ensure consistent service excellence by all team members. </li>
    <li>Responsible for the monthly inventory process to be completed accurately
       and on time, including managing and receiving orders for retail &
@@ -31,10 +35,11 @@
         <li>Maintains personal sales production expectations on monthly
            basis.</li>
          </ul>
- <h4> Vida Fitness </h4>
+         
+ <h4 style="color:gold"> Vida Fitness </h4>
  Team Supervisor<br>
  Washington, DC Jan 2017 - Jun 2018
-<ul>
+<ul style="list-style-type: georgian">
   <li>Provided the highest level of customer service to members, prospective
      members and guests. </li>
      <li>Consistent application and enforcement of workplace policies and
@@ -45,14 +50,15 @@
        <li>Monitored inventory levels by forecasting demand, evaluating potential
          shortages and running daily inventory reports.</li>
 </ul>
- <h4> The Lab ATX </h4>
+
+ <h4 style="color:gold"> The Lab ATX </h4>
  Facility Director<br>
  Austin, Texas Sept 2015 - Dec 2016
- <ul>
+ <ul style="list-style-type:square">
    <li>Direct the activities of all facility functions, assigns duties and
      delegates authority to accomplish them. </li>
      <li>Developed and enforced policies and directives for efficient
-       administration. </li>
+       administration.</li>
      <li>Supplemented policies with written guidelines and procedures.</li>
      <li>Manage and continually strive to increase the effectiveness and
        efficiency of operations services in support of the company sales.
@@ -61,10 +67,12 @@
        <li>Project quality control and assessment. Ensures that adequate
          procedures, method, and techniques are established in all programs
           and operations. </li>
+          <li>the only way to achieve your goals is to jump in! </li>
      </ul>
- <h4> Newton High School </h4>
+
+ <h4 style="color:gold"> Newton High School </h4>
  Fine Arts Instructor<br>
- Newton, Texas Aug 2013 - Jun 2015
+ Newton, Texas Aug 2013 - Jun 2015 
  <ul>
    <li>Compiled a dynamic syllabus for the school year and implemented
      curriculum.</li>
@@ -73,16 +81,17 @@
        interests and strengths, supporting learners and actively engaging in
         differentiated classroom activities, facilitating students discussing
         content and making connections between the current lesson and their
-        interests. </li>
+        interests.</li>
         <li>Provided research-based strategies to increase creativity,
           critical thinking skills and collaboration in  personally meaningful
-           ways to each student. </li>
+           ways to each student.</li>
            <li>Maintained a dialogue with parents/guardians to further
              facilitate the success of each student.</li>
              <li>Exposed students to the endless possibilities of artistic
                 processes and the personal and social benefits of creative
                  expression. </li>
                </ul>
+
  <h2> Education </h2>
  Lamar University <br>
  Bachelor of Fine Arts: Studio Art<br>
@@ -95,7 +104,8 @@
    <li> Project planning </li>
    <li> Budget planning</li>
  </ul>
- <h4> Volunteer Experience </h4>
+
+ <h4 style=color:navy;> Volunteer Experience </h4>
  Human Rights Campaign <br>
  Membership Outreach Coordinator<br>
  Austin, Texas 2015-2016
@@ -107,6 +117,8 @@
          <li>Outreach to local companies and organizations to establish
             alliances.</li>
           </ul>
+<img src="corny.jpg">
+    
 </body>
 
 </html>
