adding and deleting items to list

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -10,14 +10,16 @@
   <body>
   <h1>Shopping Cart</h1>
   
-  <ul id="listItems">
+  <div id="myDIV" class="header">
+    <input type="text" id="myInput" placeholder="Add item...">
+    <span onclick="newElement()" class="addBtn">Add</span>
+  </div>
+  <ul id="shopcartul">
     <li>All-New Fire 7 Tablet</li>
     <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms</li>
     <li>Amazon Echo</li>
     <li>Coleman Lay Z Spa Inflatable Hot Tub</li>
   </ul>
-  
-  <button onclick="myFunction()">Number of List Items</button>
 
   <div id="div">
   
